c4prj1_deck/grade.txt
Grading at Sat 18 Nov 2023 01:35:16 AM UTC
Compiling deck.c -> deck.o
deck.c: In function ‘make_deck_exclude’:
deck.c:69:35: error: ‘c’ undeclared (first use in this function)
   69 |       card_t card = card_from_num(c);
      |                                   ^
deck.c:69:35: note: each undeclared identifier is reported only once for each function it appears in
Compilation of deck.c failed

Overall Grade: F
